# bills_analysis

./: .claudeignore  .dockerignore  .env.docker.example  .gitignore  AGENTS.md  CLAUDE.md  DOCKER.md  Dockerfile  README.md  SESSION_NOTES.md  docker-compose.yml  pyproject.toml  用户使用说明.md
.agents/docs/: wt-pm-workflow.md
.claude/rules/: api-contract.md  collaboration-boundaries.md  commenting-conventions.md  dod-and-safety.md  planning-with-files.md
config/: app_config.json
docs/: 用户使用说明.md
docs/plans/: 2026-04-17-playwright-testing-design.md  2026-04-28-statistics-dashboard-design.md  2026-04-28-statistics-dashboard-implementation-plan.md
frontend/: .env.self.example  .env.testlocal.example  .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.js
plans/: agent-instruction-audit-plan-20260417.md  todo_current.md  todo_future.md
scripts/: build_client_debug_pkg.ps1  dev_webapp.ps1  export_openapi_v1.py  plan_tracker.py  probe_invoice_content.py  session_notes.py  sync_frontend_node_modules.ps1  sync_worktree_config.ps1  sync_worktree_config.sh
tests/: config.json  json_to_excel_map.py  json_to_excel_office.py  openapi_v1_baseline.json  test_api_e2e_smoke.py  test_api_schema_v1.py  test_app_config.py  test_dev_webapp_script.py  test_excel_mapping_parity.py  test_invoice_content_probe.py  test_local_backend_timeout.py  test_merge_parity.py  test_office_receiver_mapping.py  test_office_semantics.py  test_office_type_classification_rules.py  test_pipeline_parity.py  test_statistics_service.py  test_worker.py  vlm_pipeline_api.py
(+139 files in other folders)
