[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bills_analysis"
version = "0.1.0"
description = "Local backend CLI for invoice VLM extraction PoC (Ollama vision-first)."
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "rich>=13.7",
    "pymupdf>=1.23",
    "pillow>=10.2",
    "numpy<2.0.0",
    "requests>=2.31",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "openai>=2.16.0",
    "azure-ai-documentintelligence>=1.0.2",
    "python-dotenv>=1.0.1",
    "fastapi>=0.128.4",
    "uvicorn>=0.30",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
web = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.scripts]
invoice = "bills_analysis.cli:app"
invoice-web-api = "bills_analysis.api.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
# No specific environment overrides needed for local installation.
